<resources>
    <string name="app_name">BraGuia</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="pin_fragment_label">Pin Fragment</string>
    <string name="profile_fragment_label">Profile Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="todo">TODO</string>
  
    <string name="errorMessage">Error: Login invalid, wrong name or password</string>
    <string name="urlLogin">https://579f8a2e08b3ae26545741d09e8f230a.serveo.net</string>
    <string name="LoginUser">Username</string>
    <string name="LoginPw">Password</string>
    <string name="LoginReady">Login</string>
    <string name="LoginDesc">Braguia</string>

    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="loc_settings">Location service settings</string>
    <string name="settings">Location settings</string>
    <string name="history">History</string>

    <string name="content">Content</string>
    <string name="trails">Trails</string>
    <string name="media">Media</string>
    <string name="pins">Pins</string>
    <string name="maps">Maps</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="mediaplayVideo">Play</string>
    <string name="mediapauseVideo">Pause</string>
    <string name="medianotFound">"Media not found"</string>
    <string name="mediaplayAudio">Play Audio</string>
    <string name="mediapauseAudio">Pause Audio</string>
    <string name="mediadownloadAllMedia">Download All Media</string>
    <string name="download">Download</string>
</resources>